Addding new layers for Clean

--- a/InnoTech.VideoApplication2021.UI/InnoTech.VideoApplication2021.UI.csproj
+++ b/InnoTech.VideoApplication2021.UI/InnoTech.VideoApplication2021.UI.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\InnoTech.VideoApplication2021.Models\InnoTech.VideoApplication2021.Models.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
+    </ItemGroup>
+
 </Project>
