Adding second Infrastructure Repostiory

--- a/InnoTech.VideoApplication2021.UI/InnoTech.VideoApplication2021.UI.csproj
+++ b/InnoTech.VideoApplication2021.UI/InnoTech.VideoApplication2021.UI.csproj
@@ -8,6 +8,7 @@
     <ItemGroup>
       <ProjectReference Include="..\InnoTech.VideoApplication2021.Domain\InnoTech.VideoApplication2021.Domain.csproj" />
       <ProjectReference Include="..\InnoTech.VideoApplication2021.Infrastructure.DataAccess\InnoTech.VideoApplication2021.Infrastructure.DataAccess.csproj" />
+      <ProjectReference Include="..\InnoTech.VideoApplication2021.SQL\InnoTech.VideoApplication2021.SQL.csproj" />
       <ProjectReference Include="..\InnotTech.VideoApplication2021.Core\InnotTech.VideoApplication2021.Core.csproj" />
     </ItemGroup>
 
