--- a/Innotech.VideoApplication2021.WebApi/Properties/launchSettings.json
+++ b/Innotech.VideoApplication2021.WebApi/Properties/launchSettings.json
@@ -4,8 +4,8 @@
     "windowsAuthentication": true,
     "anonymousAuthentication": false,
     "iisExpress": {
-      "applicationUrl": "http://localhost:48073",
-      "sslPort": 44385
+      "applicationUrl": "http://localhost:1841",
+      "sslPort": 44392
     }
   },
   "profiles": {
@@ -17,10 +17,10 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Innotech.VideoApplication2021.WebApi": {
+    "InnoTech.VideoApplication2021.WebApi": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
